# crates_io_database

./: .gitignore  Cargo.toml  Makefile.toml  README.md
sample_data/: crates.qvs20
src/: extract_and_save_mod.rs  main.rs  qvs20_error_mod.rs  qvs20_reader_mod.rs  qvs20_schema_mod.rs  qvs20_table_mod.rs  qvs20_writer_mod.rs  utils_mod.rs
