[package]
name = "crates_io_database"
version = "1.1.1"
authors = ["Luciano Bestia <luciano.bestia@gmail.com>"]
edition = "2018"
description = "convert the crates.io database into a compact form with minimal data"
repository = "https://github.com/LucianoBestia/lmake_lines_of_code"
readme = "README.md"
license = "MIT"
keywords = ["rust", "make"]
categories = ["development-tools::build-utils"]
# publish as a cargo tool. Only this files.
publish = false
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*",
]

[dependencies]
unwrap = "1.2.1"
clap = "2.33.0"
ansi_term = "0.12.0"
#glob = "0.3.0"
#regex = "1.3.6"
#lazy_static="1.4.0"
#toml = "0.5.6"
serde ="1.0.111"
serde_derive="1.0.111"
csv="1.1.3"
strum = "0.18.0"
strum_macros = "0.18.0"
anyhow = "1.0.31"
thiserror="1.0.20"

[badges]
maintenance = { status = "passively-maintained" }
